Implement lesson generation and expansion features; integrate Google Generative AI for dynamic content creation; update lesson routes and enhance topic structure with additional metadata.

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ PORT = 3000
 MONGODB_URI = "mongodb+srv://rohitsinghrajputabad_db_user:pKCwF3pxNu1FcD8R@cluster0.n2joucf.mongodb.net/?appName=Cluster0"
 
 FRONTEND_URL = 
+
+GEMINI_API_KEY=AIzaSyD4veqQdZo6-ZCH5T8EI_gJ4Ki-9ZNOlMM
